create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2327,43 +2327,43 @@ body {
 .cid-rjNUde5OLl .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rjNUgA3M2k {
+.cid-rjYpYgJlKV {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-rjNUgA3M2k .content {
+  .cid-rjYpYgJlKV .content {
     text-align: center;
   }
-  .cid-rjNUgA3M2k .content > div:not(:last-child) {
+  .cid-rjYpYgJlKV .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rjNUgA3M2k .media-wrap {
+  .cid-rjYpYgJlKV .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rjNUgA3M2k .media-wrap .mbr-iconfont-logo {
+.cid-rjYpYgJlKV .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rjNUgA3M2k .media-wrap img {
+.cid-rjYpYgJlKV .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rjNUgA3M2k .footer-lower .copyright {
+  .cid-rjYpYgJlKV .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rjNUgA3M2k .footer-lower hr {
+.cid-rjYpYgJlKV .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rjNUgA3M2k .footer-lower .social-list {
+.cid-rjYpYgJlKV .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2372,32 +2372,32 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-rjNUgA3M2k .footer-lower .social-list .mbr-iconfont-social {
+.cid-rjYpYgJlKV .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rjNUgA3M2k .footer-lower .social-list .soc-item {
+.cid-rjYpYgJlKV .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rjNUgA3M2k .footer-lower .social-list a {
+.cid-rjYpYgJlKV .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rjNUgA3M2k .footer-lower .social-list a:hover {
+.cid-rjYpYgJlKV .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rjNUgA3M2k .footer-lower .social-list {
+  .cid-rjYpYgJlKV .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-rjNUgA3M2k P {
+.cid-rjYpYgJlKV P {
   text-align: left;
 }
-.cid-rjNUgA3M2k H5 {
+.cid-rjYpYgJlKV H5 {
   text-align: left;
 }
 .cid-rj2FVZYRxz {
@@ -2875,43 +2875,43 @@ body {
 .cid-rjNU1ImCWV .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rjNU51nkFT {
+.cid-rjYpr8cKtr {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-rjNU51nkFT .content {
+  .cid-rjYpr8cKtr .content {
     text-align: center;
   }
-  .cid-rjNU51nkFT .content > div:not(:last-child) {
+  .cid-rjYpr8cKtr .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rjNU51nkFT .media-wrap {
+  .cid-rjYpr8cKtr .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rjNU51nkFT .media-wrap .mbr-iconfont-logo {
+.cid-rjYpr8cKtr .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rjNU51nkFT .media-wrap img {
+.cid-rjYpr8cKtr .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rjNU51nkFT .footer-lower .copyright {
+  .cid-rjYpr8cKtr .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rjNU51nkFT .footer-lower hr {
+.cid-rjYpr8cKtr .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rjNU51nkFT .footer-lower .social-list {
+.cid-rjYpr8cKtr .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2920,32 +2920,32 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-rjNU51nkFT .footer-lower .social-list .mbr-iconfont-social {
+.cid-rjYpr8cKtr .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rjNU51nkFT .footer-lower .social-list .soc-item {
+.cid-rjYpr8cKtr .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rjNU51nkFT .footer-lower .social-list a {
+.cid-rjYpr8cKtr .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rjNU51nkFT .footer-lower .social-list a:hover {
+.cid-rjYpr8cKtr .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rjNU51nkFT .footer-lower .social-list {
+  .cid-rjYpr8cKtr .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-rjNU51nkFT P {
+.cid-rjYpr8cKtr P {
   text-align: left;
 }
-.cid-rjNU51nkFT H5 {
+.cid-rjYpr8cKtr H5 {
   text-align: left;
 }
 .cid-rj2DZ6xU6m {
@@ -2980,79 +2980,6 @@ body {
 }
 .cid-rj2DZ6xU6m H2 {
   color: #ffffff;
-}
-.cid-rjNTU4801s {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
-}
-@media (max-width: 767px) {
-  .cid-rjNTU4801s .content {
-    text-align: center;
-  }
-  .cid-rjNTU4801s .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-rjNTU4801s .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-rjNTU4801s .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-rjNTU4801s .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-rjNTU4801s .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-rjNTU4801s .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-rjNTU4801s .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-}
-.cid-rjNTU4801s .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-rjNTU4801s .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-rjNTU4801s .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-rjNTU4801s .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-rjNTU4801s .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-rjNTU4801s P {
-  text-align: left;
-}
-.cid-rjNTU4801s H5 {
-  text-align: left;
 }
 .cid-rjNTX8Ca9N .navbar {
   padding: .5rem 0;
@@ -3442,6 +3369,84 @@ body {
 .cid-rjNTX8Ca9N .nav-link:hover,
 .cid-rjNTX8Ca9N .dropdown-item:hover {
   color: #c1c1c1 !important;
+}
+.cid-rjYplYKoqL {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2e2e2e;
+}
+@media (max-width: 767px) {
+  .cid-rjYplYKoqL .content {
+    text-align: center;
+  }
+  .cid-rjYplYKoqL .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rjYplYKoqL .media-wrap {
+    margin-bottom: 1rem;
+  }
+}
+.cid-rjYplYKoqL .media-wrap .mbr-iconfont-logo {
+  font-size: 7.5rem;
+  color: #f36;
+}
+.cid-rjYplYKoqL .media-wrap img {
+  height: 6rem;
+}
+@media (max-width: 767px) {
+  .cid-rjYplYKoqL .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-rjYplYKoqL .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-rjYplYKoqL .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+}
+.cid-rjYplYKoqL .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-rjYplYKoqL .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-rjYplYKoqL .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-rjYplYKoqL .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-rjYplYKoqL .footer-lower .social-list {
+    justify-content: center;
+    -webkit-justify-content: center;
+  }
+}
+.cid-rjYplYKoqL P {
+  text-align: left;
+}
+.cid-rjYplYKoqL H5 {
+  text-align: left;
+}
+.cid-rjTTPj0RIA {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #2e2e2e;
 }
 .cid-rjHWUhcEla {
   background-image: url("../../../assets/images/shutterstock-477729247-2000x1328.jpg");
@@ -3912,43 +3917,43 @@ body {
 .cid-rjNTMlwhan .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-rjNTPHMrGA {
+.cid-rjYpidckKu {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #2e2e2e;
 }
 @media (max-width: 767px) {
-  .cid-rjNTPHMrGA .content {
+  .cid-rjYpidckKu .content {
     text-align: center;
   }
-  .cid-rjNTPHMrGA .content > div:not(:last-child) {
+  .cid-rjYpidckKu .content > div:not(:last-child) {
     margin-bottom: 2rem;
   }
 }
 @media (max-width: 767px) {
-  .cid-rjNTPHMrGA .media-wrap {
+  .cid-rjYpidckKu .media-wrap {
     margin-bottom: 1rem;
   }
 }
-.cid-rjNTPHMrGA .media-wrap .mbr-iconfont-logo {
+.cid-rjYpidckKu .media-wrap .mbr-iconfont-logo {
   font-size: 7.5rem;
   color: #f36;
 }
-.cid-rjNTPHMrGA .media-wrap img {
+.cid-rjYpidckKu .media-wrap img {
   height: 6rem;
 }
 @media (max-width: 767px) {
-  .cid-rjNTPHMrGA .footer-lower .copyright {
+  .cid-rjYpidckKu .footer-lower .copyright {
     margin-bottom: 1rem;
     text-align: center;
   }
 }
-.cid-rjNTPHMrGA .footer-lower hr {
+.cid-rjYpidckKu .footer-lower hr {
   margin: 1rem 0;
   border-color: #fff;
   opacity: .05;
 }
-.cid-rjNTPHMrGA .footer-lower .social-list {
+.cid-rjYpidckKu .footer-lower .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -3957,32 +3962,32 @@ body {
   justify-content: flex-end;
   -webkit-justify-content: flex-end;
 }
-.cid-rjNTPHMrGA .footer-lower .social-list .mbr-iconfont-social {
+.cid-rjYpidckKu .footer-lower .social-list .mbr-iconfont-social {
   font-size: 1.3rem;
   color: #fff;
 }
-.cid-rjNTPHMrGA .footer-lower .social-list .soc-item {
+.cid-rjYpidckKu .footer-lower .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rjNTPHMrGA .footer-lower .social-list a {
+.cid-rjYpidckKu .footer-lower .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rjNTPHMrGA .footer-lower .social-list a:hover {
+.cid-rjYpidckKu .footer-lower .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rjNTPHMrGA .footer-lower .social-list {
+  .cid-rjYpidckKu .footer-lower .social-list {
     justify-content: center;
     -webkit-justify-content: center;
   }
 }
-.cid-rjNTPHMrGA P {
+.cid-rjYpidckKu P {
   text-align: left;
 }
-.cid-rjNTPHMrGA H5 {
+.cid-rjYpidckKu H5 {
   text-align: left;
 }
 .cid-qTkzRZLJNu .navbar {
